新增功能 ：更新凭证 上传头像 去掉cos信息

--- a/morsunapi-backend/src/main/resources/application.yml
+++ b/morsunapi-backend/src/main/resources/application.yml
@@ -84,13 +84,13 @@ wx:
     appId: xxx
     appSecret: xxx
 # 对象存储
-# todo 需替换配置
+# todo cos 需替换配置（记得上传时要脱敏哦）
 cos:
   client:
-    accessKey: xxx
-    secretKey: xxx
-    region: xxx
-    bucket: xxx
+    accessKey:
+    secretKey:
+    region:
+    bucket:
 morsun:
   client:
     access-key: 327ed44fa5561f6c8e1f8541b1f664f4
